force-app/main/default/objects/Base_Rate_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tier_Code__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Version__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>